add pagas notifications, perfil, security for general users
